One more change

--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
 
 <body>
 	<h1>This is my first page for the assignment.</h1>
-	<p>When I was 11, I wrote my first website in HTML on a notepad. I used the website to host many flash games & play with forums. <br> At 22, I have come to the realization that I dispise working for an employer to earn a paycheque. I also understand that many small and emergent businesses are really interested in having a website. Putting the two together, I have decided that I will persue web development for myself and others. I hope that this journey is fruitful and teaches me a lot about myself, business, and the world. I also hope to help many people, since I find great joy in the act of helping others. <br>I hope my goals are clear.</p>
+	<p>When I was 11, I wrote my first website in HTML on a notepad. I used the website to host many flash games & play with forums. <br><br>At 22, I have come to the realization that I dispise working for an employer to earn a paycheque. I also understand that many small and emergent businesses are really interested in having a website. Putting the two together, I have decided that I will persue web development for myself and others. I hope that this journey is fruitful and teaches me a lot about myself, business, and the world. I also hope to help many people, since I find great joy in the act of helping others. <br><br>My path is clear.</p>
 </body>
 
 </html>
